--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@
     outline: none;
     width: 100%;
     height: 56px;
-    padding: 0 56px 0 16px;
+    padding: 0 75px 0 px;
     border-radius: 6px;
     background: #f4f5f7;
     color: #5a4f79;
@@ -132,4 +132,9 @@
   .toggle.showing {
     background-image: url("img/hide.svg");
   }
+
+  .error-message {
+    color: red;
+    margin-top: 10px;
+}
   
