--- a/estilos/style.css
+++ b/estilos/style.css
@@ -31,9 +31,9 @@ body {
   display: grid;
   place-items: center;
   margin: 0;
-  background: #e8f2f7;
+  background: #8cc4e0;
   font-family: "Euclid Circular A", "Poppins";
-  color: #3a334e;
+  color: #000000;
   animation: rotate 1s infinite alternate linear;
   overflow-y: hidden;
 }
@@ -53,7 +53,7 @@ button {
   height: 56px;
   padding: 0 56px 0 16px;
   border-radius: 6px;
-  background: #f4f5f7;
+  background: #e9e9e9;
   color: #5a4f79;
   font-family: inherit;
   font-size: 18px;
@@ -66,14 +66,16 @@ button {
 
 .card {
   width: 400px;
+  height: 750px;
   padding: 60px 30px 38px;
   border-radius: 1.25rem;
-  background: #ffffff;
+  background: #e23f3f;
   text-align: center;
 }
 
 .card > img {
 width: 300px;
+border-radius: 50%;
 padding-bottom: 20px;
 margin-top: -40px;
 }
@@ -135,8 +137,8 @@ margin-top: -40px;
 
 .toggle {
   position: absolute;
-  top: 560px;
-  right: 564px;
+  top: 73%;
+  right: 42%;
   translate: 0 -50%;
   width: 30px;
   height: 30px;
@@ -152,7 +154,9 @@ margin-top: -40px;
 }
 
 .error-message {
-  color: red;
+  font-size: 16px;
+  font-weight: bolder;
+  color: rgb(0, 0, 0);
   margin-top: 10px;
 }
 
